syntax = "proto3";

package user;

service UserService {
  rpc GetUserDetails(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string _id = 1;
}

message UserResponse {
  string _id = 1;
  string firstName = 2;
  string email = 3;
  string phone = 4;
}
